# gnome-welcome-extension

./: .gitignore  autogen.sh  configure.ac  include.mk
po/: POTFILES.in
src/: Makefile.am  bubble.js  extension.js  metadata.json  stylesheet.css
